# darknet

./: .gitignore  CM_definitions.cmake  CM_dependencies.cmake  CM_package.cmake  CM_source.cmake  CM_version.cmake  CMakeLists.txt  README.md  license.txt
artwork/: darknet-ng-ico.xcf  darknet-ng.xcf
old/: Makefile_old
src/: detector.c
src-cli/: CMakeLists.txt  darknet-ng.rc  main.cpp
src-doc/: CMakeLists.txt  Doxyfile.in  links.dox  mainpage.dox
src-lib/: Activation.cpp  Activation.hpp  CMakeLists.txt  Config.cpp  Exception.cpp  Exception.hpp  LearningRatePolicy.cpp  LearningRatePolicy.hpp  Network.cpp  Network.hpp  activation.cpp  activation.hpp  activations.hpp  blas.cpp  blas.hpp  config.cpp  config.hpp  darknet-ng.cpp  darknet-ng.hpp  darknet.h  enums.hpp  gemm.cpp  gemm.hpp  gemm_avx.cpp  gemm_cpu.cpp  gemm_gpu.cpp  layers.cpp  layers.hpp  network.cpp  network.hpp  network_convolutional.cpp  network_net.cpp  parser.cpp  parser.hpp  structs.hpp
src-old/: activations.c  activations.h  blas.c  convolutional_layer.c  convolutional_layer.h  gemm.c  gemm.h  im2col.h  network.c  parser.c  utils.c
